--- a/Security/src/main/webapp/reportes/rpt_capacitados.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_capacitados.jrxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.19.1.final using JasperReports Library version 6.19.1-867c00bf88cd4d784d404379d6c05e1b419e8a4c  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_consolidado" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="821f3426-b2af-4170-b1df-e5ce8b6ef15a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_consolidado" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isSummaryNewPage="true" uuid="821f3426-b2af-4170-b1df-e5ce8b6ef15a">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="232"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="762"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="daGestionDocente"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="mysql"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w1" value="390"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="599"/>
 	<parameter name="pconv" class="java.lang.Integer"/>
@@ -114,7 +114,7 @@
 	<columnHeader>
 		<band height="78" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="20" y="18" width="70" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
+				<reportElement mode="Opaque" x="0" y="18" width="70" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -126,7 +126,7 @@
 				<text><![CDATA[Convocatoria]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="170" y="18" width="70" height="60" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
+				<reportElement mode="Opaque" x="150" y="18" width="90" height="60" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="00637501-733e-4462-b3e2-5545c25731a7"/>
 				</reportElement>
 				<box>
@@ -138,7 +138,7 @@
 				<text><![CDATA[Capacitación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="90" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
+				<reportElement mode="Opaque" x="240" y="18" width="100" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="37d3dd09-aa49-4ece-bb02-f897e8ef198e"/>
 				</reportElement>
 				<box>
@@ -150,7 +150,7 @@
 				<text><![CDATA[Nombre Docente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="320" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
+				<reportElement mode="Opaque" x="340" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0ceaf5e3-39a3-4443-bc51-6a8b067ddd72"/>
 				</reportElement>
 				<box>
@@ -162,7 +162,7 @@
 				<text><![CDATA[Carreras]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="400" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
+				<reportElement mode="Opaque" x="420" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
 				</reportElement>
 				<box>
@@ -174,7 +174,7 @@
 				<text><![CDATA[Departamento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="480" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="110cb245-bc78-4580-a23c-04177466d4fd">
+				<reportElement mode="Opaque" x="500" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="110cb245-bc78-4580-a23c-04177466d4fd">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a412b4ec-9bb5-43ee-a218-2545e2493bea"/>
 				</reportElement>
 				<box>
@@ -186,7 +186,7 @@
 				<text><![CDATA[Facultad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="240" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="9f7284c8-779e-4c12-9b62-a417b868b9d9">
+				<reportElement mode="Opaque" x="70" y="18" width="80" height="60" forecolor="#FFFFFF" backcolor="#142D87" uuid="9f7284c8-779e-4c12-9b62-a417b868b9d9">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -201,8 +201,8 @@
 	</columnHeader>
 	<detail>
 		<band height="66" splitType="Stretch">
-			<textField>
-				<reportElement x="20" y="0" width="70" height="66" uuid="1141d4d6-3769-4a0b-8c61-6b91c59cc367">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="0" y="0" width="70" height="66" uuid="1141d4d6-3769-4a0b-8c61-6b91c59cc367">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -211,8 +211,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{convocatoria}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="90" y="0" width="80" height="66" uuid="2c70a4ef-c8a4-424f-a25a-ddbbd083c8a3">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="240" y="0" width="100" height="66" uuid="2c70a4ef-c8a4-424f-a25a-ddbbd083c8a3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="37d3dd09-aa49-4ece-bb02-f897e8ef198e"/>
 				</reportElement>
 				<box>
@@ -221,8 +221,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{nombre_completo}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="320" y="0" width="80" height="66" uuid="ffcf91af-bea2-4ec2-9bfb-e14304eec92d">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="340" y="0" width="80" height="66" uuid="ffcf91af-bea2-4ec2-9bfb-e14304eec92d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0ceaf5e3-39a3-4443-bc51-6a8b067ddd72"/>
 				</reportElement>
 				<box>
@@ -231,8 +231,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{carreras}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="400" y="0" width="80" height="66" uuid="4e4d8e29-fb65-4769-9756-bfcc0a81fe6e">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="420" y="0" width="80" height="66" uuid="4e4d8e29-fb65-4769-9756-bfcc0a81fe6e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
 				</reportElement>
 				<box>
@@ -241,8 +241,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{departamento}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="480" y="0" width="80" height="66" uuid="ff9d2a15-80b0-44b3-8936-14ee556d0fab">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="500" y="0" width="80" height="66" uuid="ff9d2a15-80b0-44b3-8936-14ee556d0fab">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a412b4ec-9bb5-43ee-a218-2545e2493bea"/>
 				</reportElement>
 				<box>
@@ -251,8 +251,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{facultad}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="170" y="0" width="70" height="66" uuid="79f8eb0a-a157-4daf-9567-a14ce2681071">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="150" y="0" width="90" height="66" uuid="79f8eb0a-a157-4daf-9567-a14ce2681071">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="00637501-733e-4462-b3e2-5545c25731a7"/>
 				</reportElement>
 				<box>
@@ -261,8 +261,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{capacitacion}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="240" y="0" width="80" height="66" uuid="498446e0-cdd0-4d32-98cd-7fe1a8a11756">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="70" y="0" width="80" height="66" uuid="498446e0-cdd0-4d32-98cd-7fe1a8a11756">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="996d2e57-755a-467e-87fe-02ef76d8974f"/>
 				</reportElement>
 				<box>
