--- a/Security/src/main/webapp/reportes/rpt_certificados.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_certificados.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with Jaspersoft Studio version 6.19.1.final using JasperReports Library version 6.19.1-867c00bf88cd4d784d404379d6c05e1b419e8a4c  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_consolidado" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="821f3426-b2af-4170-b1df-e5ce8b6ef15a">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="daFGestionDocente"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="mysql"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="232"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="762"/>
 	<parameter name="pconv" class="java.lang.Integer"/>
@@ -112,7 +112,7 @@
 	<columnHeader>
 		<band height="66" splitType="Stretch">
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="9" y="0" width="61" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="cf7f8d24-d9c8-409f-9b7c-26ccc392a52b">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="-10" y="0" width="80" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="cf7f8d24-d9c8-409f-9b7c-26ccc392a52b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6c874208-24b8-46eb-89ec-7d401827f0b0"/>
 				</reportElement>
 				<box>
@@ -128,7 +128,7 @@
 				<text><![CDATA[Convocatoria]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="70" y="0" width="64" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="c3123ec9-7241-401c-acbd-7c9eb9868b32">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="150" y="0" width="90" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="c3123ec9-7241-401c-acbd-7c9eb9868b32">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="46554756-9fd6-4b4a-b728-e8b09e6f60b2"/>
 				</reportElement>
 				<box>
@@ -144,7 +144,7 @@
 				<text><![CDATA[Capacitación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="134" y="0" width="76" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="dea83b3f-7e3f-4234-8d7e-c51c4767547a">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="240" y="0" width="80" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="dea83b3f-7e3f-4234-8d7e-c51c4767547a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d14a72cc-1c67-4e8e-b0ae-36cedea18792"/>
 				</reportElement>
 				<box>
@@ -160,7 +160,7 @@
 				<text><![CDATA[Nombre Docente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="210" y="0" width="59" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="184bc2bd-d29f-4c7a-bdc0-284e1dbefcaa">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="320" y="0" width="79" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="184bc2bd-d29f-4c7a-bdc0-284e1dbefcaa">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d14a72cc-1c67-4e8e-b0ae-36cedea18792"/>
 				</reportElement>
 				<box>
@@ -176,7 +176,7 @@
 				<text><![CDATA[Carreras]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="269" y="0" width="91" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="7bd138d6-0435-40e9-9ce7-ca6093838424">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="399" y="0" width="91" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="7bd138d6-0435-40e9-9ce7-ca6093838424">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d14a72cc-1c67-4e8e-b0ae-36cedea18792"/>
 				</reportElement>
 				<box>
@@ -192,7 +192,7 @@
 				<text><![CDATA[Departamentos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="ContainerHeight" mode="Opaque" x="480" y="0" width="90" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="355bca18-d00e-44b0-92e5-6e30041347dc">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="490" y="0" width="90" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="355bca18-d00e-44b0-92e5-6e30041347dc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d14a72cc-1c67-4e8e-b0ae-36cedea18792"/>
 				</reportElement>
 				<box>
@@ -208,7 +208,7 @@
 				<text><![CDATA[Facultad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="360" y="0" width="120" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="83a8570e-53ce-454f-b575-b30de518dc86">
+				<reportElement mode="Opaque" x="70" y="0" width="80" height="66" forecolor="#FFFFFF" backcolor="#17308A" uuid="83a8570e-53ce-454f-b575-b30de518dc86">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1d90bd44-05eb-4e25-9071-94a9a95c5a3c"/>
 				</reportElement>
 				<box>
@@ -218,16 +218,16 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Franklin Gothic Medium" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Tipo Calificación]]></text>
+				<text><![CDATA[Tipo Capacitación]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="71" splitType="Stretch">
-			<textField>
-				<reportElement mode="Opaque" x="9" y="0" width="61" height="71" uuid="97500aac-231e-4c8e-8dc1-7d8d2cdf6c1e">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="-10" y="0" width="80" height="71" uuid="97500aac-231e-4c8e-8dc1-7d8d2cdf6c1e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="34e88702-f1b8-48b0-b209-8e77e4a64738"/>
 				</reportElement>
 				<box>
@@ -240,8 +240,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{convocatoria}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement mode="Opaque" x="70" y="0" width="64" height="71" uuid="1787f645-e5ee-4541-9657-980cda311239">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="150" y="0" width="90" height="71" uuid="1787f645-e5ee-4541-9657-980cda311239">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="eb8814c2-bdbd-498d-b2d6-38548bd246de"/>
 				</reportElement>
 				<box>
@@ -254,8 +254,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{capacitacion}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement mode="Opaque" x="134" y="0" width="76" height="71" uuid="e4e0a5a4-74a7-4128-8baa-f97ac263dcd1">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="240" y="0" width="80" height="71" uuid="e4e0a5a4-74a7-4128-8baa-f97ac263dcd1">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0e9452be-b2fc-417a-bd3b-2b70cab233b8"/>
 				</reportElement>
 				<box>
@@ -268,8 +268,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{nombre_completo}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement mode="Opaque" x="210" y="0" width="59" height="71" uuid="20f08e01-168a-403e-a6eb-effcb62f83d0">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="320" y="0" width="79" height="71" uuid="20f08e01-168a-403e-a6eb-effcb62f83d0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9ca4f9bc-9301-477e-b0de-6f0924c271bb"/>
 				</reportElement>
 				<box>
@@ -282,8 +282,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{carreras}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement mode="Opaque" x="269" y="0" width="91" height="71" uuid="f10a81d1-4ad1-4916-9ca7-a423d93ff427">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="399" y="0" width="91" height="71" uuid="f10a81d1-4ad1-4916-9ca7-a423d93ff427">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="08b9a578-b7cd-488b-aaae-f2b0101ee32b"/>
 				</reportElement>
 				<box>
@@ -296,8 +296,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{departamento}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement mode="Opaque" x="480" y="0" width="90" height="71" uuid="fb9694e7-e794-43b6-af75-49ba0a5cee78">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" mode="Opaque" x="490" y="0" width="90" height="71" uuid="fb9694e7-e794-43b6-af75-49ba0a5cee78">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5975a80b-634c-4c1c-b078-cd21e8a92bb1"/>
 				</reportElement>
 				<box>
@@ -310,8 +310,8 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{facultad}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="360" y="0" width="120" height="71" uuid="6804b251-cd4b-4b9d-a924-430095c0b6cc">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement stretchType="ContainerHeight" x="70" y="0" width="80" height="71" uuid="6804b251-cd4b-4b9d-a924-430095c0b6cc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1d90bd44-05eb-4e25-9071-94a9a95c5a3c"/>
 				</reportElement>
 				<box>
@@ -321,7 +321,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{tipo_calificacion}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tipo_capacitacion}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
