--- a/Security/src/main/webapp/reportes/rpt_tipo_calificacion.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_tipo_calificacion.jrxml
@@ -4,7 +4,7 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="232"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="762"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="daGestionDocente"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="mysql"/>
 	<parameter name="pconv" class="java.lang.Integer"/>
 	<parameter name="ptcurso" class="java.lang.Integer"/>
 	<parameter name="pcurso" class="java.lang.Integer"/>
@@ -204,7 +204,7 @@
 	</columnHeader>
 	<detail>
 		<band height="71" splitType="Stretch">
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement mode="Opaque" x="9" y="0" width="61" height="71" uuid="97500aac-231e-4c8e-8dc1-7d8d2cdf6c1e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="34e88702-f1b8-48b0-b209-8e77e4a64738"/>
 				</reportElement>
@@ -215,10 +215,12 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{convocatoria}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement mode="Opaque" x="156" y="0" width="84" height="71" uuid="1787f645-e5ee-4541-9657-980cda311239">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="eb8814c2-bdbd-498d-b2d6-38548bd246de"/>
 				</reportElement>
@@ -229,10 +231,12 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitacion}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement mode="Opaque" x="70" y="0" width="86" height="71" uuid="e4e0a5a4-74a7-4128-8baa-f97ac263dcd1">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0e9452be-b2fc-417a-bd3b-2b70cab233b8"/>
 				</reportElement>
@@ -243,10 +247,12 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombre_completo}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement x="240" y="0" width="100" height="71" uuid="6804b251-cd4b-4b9d-a924-430095c0b6cc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1d90bd44-05eb-4e25-9071-94a9a95c5a3c"/>
 				</reportElement>
@@ -257,10 +263,12 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{tipo_calificacion}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement x="340" y="0" width="90" height="71" uuid="21f2bea7-14de-49ae-820b-3b5636fc2626">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="10feb7d7-6621-4367-a4c5-ad90678316c5"/>
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
@@ -272,10 +280,12 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement x="430" y="0" width="120" height="71" uuid="e9531783-c0e7-4a78-b6cd-187755d252f3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4311a28f-5e53-4fff-b1de-4b3821bc3482"/>
 				</reportElement>
@@ -286,7 +296,9 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<paragraph lineSpacingSize="1.0"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{desc_valor}]]></textFieldExpression>
 			</textField>
 		</band>
